--- a/Js/异步请求数据.md
+++ b/Js/异步请求数据.md
@@ -196,7 +196,7 @@ fetch("https://jsonplaceholder.typicode.com/posts", {
 .then(json => console.log(json)); 
 
 
-4. async/await
+4. async/await,  async/await时Promise的语法糖
 
 虽然使用了fetch，但是还是有回调的影子，能不能再美观一下，async/await出来了，async/await就是promise的语法糖，可以让异步和同步编写一样.
 
